# xelis-docs

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  theme.config.jsx
app/: layout.jsx
app/[[...mdxPath]]/: page.jsx
components/: card.jsx  card.tsx  icons.jsx  icons.tsx
content/: _meta.js  contributors.mdx  developers-sdk.mdx  development-status.mdx  faq.mdx  index.mdx  network-upgrades.mdx  tokenomics.mdx
content/developers-api/: _meta.js  daemon.mdx  stratum.mdx  wallet.mdx
content/features/: _meta.js  balance-proof.mdx  ownership-proof.mdx
content/getting-started/: _meta.js  bootstrap.mdx  build-from-source-code.mdx  download-binaries.mdx  precompiled-binaries.mdx
content/links/: _meta.js  community.mdx  exchanges.mdx  network.mdx  network.module.css  pools.mdx
content/tutorials/: _meta.js  smart-contract-playground.mdx
crates/xelis-config-docs/: Cargo.toml
crates/xelis-config-docs/src/: main.rs
definitions/configuration/: xelis_daemon.config.mdx  xelis_daemon.generated.mdx  xelis_miner.generated.mdx  xelis_wallet.config.mdx  xelis_wallet.generated.mdx
definitions/standard-library/: xvm-stdlib.generated.mdx
pages/: _meta.json  bounties.mdx  build.mdx  contributors.mdx  developers-sdk.mdx  development-status.mdx  faq.mdx  index.mdx  links.mdx  network-upgrades.mdx  network_upgrades.mdx  project.mdx  run.mdx  team.mdx  team.module.css  tokenomics.mdx
pages/developers/: _meta.json  sdk.mdx
pages/developers-api/: _meta.json  daemon.mdx  index.mdx  mini.mdx  stratum.mdx  wallet.mdx
pages/features/: _meta.json  (+16 more)
scripts/: 1.update_doc_out.mjs  2.check-missing-values.mjs  3.verify_docs.mjs  4.generate-stdlib-docs-mdx.mjs  README.md  generate-stdlib-docs.js
(+294 files in other folders)
