[package]
name = "xelis-config-docs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5.2", features = ["derive"] }
clap-markdown = { git = "https://github.com/xelis-project/clap-markdown" }
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev" }
xelis_daemon = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", default-features = false, features = ["cli", "sled"] }
