[package]
name = "xelis-config-docs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5.2", features = ["derive"] }
clap-markdown-generator = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev" }
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev" }
xelis_daemon = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev" }
xelis_miner = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev" }